--- a/css/teclas.css
+++ b/css/teclas.css
@@ -3,53 +3,67 @@
     padding: 0;
     box-sizing: border-box;
     list-style: none;
-    background: black;
 }
 
 .teclado {
-    background-color:red ;
-    width: 600px;
+    width: 100%;
+    background-color: white;
+}
+.container {
+    width:320px ;
+    background-color: red;
     margin: 0 auto;
-    border-radius: 15px;
+    padding: 10px;
+    display: flex;
+    border-radius: 8px;
 }
 
 .teclado ul {
     background-color:blue;
-    width: 800px;
-    margin: 0 auto;
-    margin-top:200px ;
+    width: 300px;
     display: flex;
     justify-content: space-around;
-    flex-flow: wrap;
-    padding: 20px;
-    border-radius: 15px;
+    flex-wrap: wrap;
+    height: 300px;
+    border-radius: 8px;
+    margin: 0 auto;
 }
 
 .teclado li{
-    background-color: green;
     width: 20%;
+    height: 13%;
     margin: 2%;
-    text-align: center;
+    border: none;
+    border-radius: 8px;
+
+}
+.teclado li:active {
+    width: sca;
 }
 
-.teclado button {
-    background-color:yellow ;
-    padding: 20px;
-    font-weight: bold;
-    border-radius: 15px;
+.teclado li:hover {
+    box-shadow: 0px 0px 20px 8px white;
+
+}
+
+
+.teclado .tecla {
+    background-color:darkblue;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
     font-size: 32px;
+    color: white;
 }
 
-.reset  {
+.teclado tecla {
     background-color: grey;
 }
+
 .attribution {
     font-size: 11px;
     text-align: center;
 }
 .attribution a {
     color: hsl(228, 45%, 44%);
-}
-.teclado ul li button {
-    width: 100px; height: 30px
 }
