--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,8 @@ body{
 }
 .header{
     width: 50vw;
-    margin: auto;
+    margin:  auto;
+    margin-top: 100px;
 }
 .header div{
     display: flex;
