Aumento da largura deixando proporcional ao display adicionei espço entre as sections, melhorei os efeita visuais sobre as teclas com supressão e sombra.

--- a/css/teclas.css
+++ b/css/teclas.css
@@ -10,22 +10,23 @@
     background-color: white;
 }
 .container {
-    width:320px ;
+    width:50vw ;
     background-color: red;
     margin: 0 auto;
     padding: 10px;
     display: flex;
     border-radius: 8px;
+    margin-top: 40px;
 }
 
 .teclado ul {
     background-color:blue;
-    width: 300px;
+    width: 48vw;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    height: 300px;
-    border-radius: 8px;
+    height: 500px;
+    border-radius: 10px;
     margin: 0 auto;
 }
 
@@ -34,16 +35,15 @@
     height: 13%;
     margin: 2%;
     border: none;
-    border-radius: 8px;
-
+    border-radius: 10px;
 }
+
 .teclado li:active {
-    width: sca;
+    box-shadow: 0px 0px 20px 8px lightblue;    
 }
 
 .teclado li:hover {
-    box-shadow: 0px 0px 20px 8px white;
-
+    scale: .8;   
 }
 
 
