--- a/src/css/colors.css
+++ b/src/css/colors.css
@@ -8,7 +8,7 @@
 
     /*  Keys */
     --Desaturated-dark-blue: hsl(225, 21%, 49%);
-    --Desaturated-dark-blue: hsl(224, 28%, 35%);
+    --Desaturated-dark-blue2: hsl(224, 28%, 35%);
 
     --red: hsl(6, 63%, 50%);
     --dark-red: hsl(6, 70%, 34%);
