--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,9 +1,18 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+}
+
 body{
     background-color: var(--main-background);
     color: white;
+    max-width:  1440px;
 }
-.header{
-    width: 50vw;
+.header,
+.teclado{
+    max-width:  500px;
     margin:  auto;
     margin-top: 100px;
 }
