Add theme change logic, setting variable styles

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,7 +7,7 @@
 
 body{
     background-color: var(--main-background);
-    color: white;
+    color: var(--text-buttons);
     max-width:  1440px;
 }
 .header,
@@ -30,5 +30,7 @@ body{
     border: none;
     border-radius: 10px;
     font-size: 40px;
-    color: white;
+    font-weight: bold;
+    text-align: end;
+    color: var(--text-buttons);
 }
