--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,19 +10,19 @@ body{
     color: var(--text-buttons);
     max-width:  1440px;
 }
-.header,
+.display,
 .teclado{
     max-width:  500px;
     margin:  auto;
     margin-top: 100px;
 }
-.header div{
+.display div{
     display: flex;
     justify-content: space-between;
     align-items: center;  
 }
 
-.header .result{
+.display .result{
     background-color: var(--screen-brackground);
     width: 100%;
     height: 80px;
