--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,22 +7,22 @@
 
 body{
     background-color: var(--main-background);
-    color: white;
+    color: var(--text-buttons);
     max-width:  1440px;
 }
-.header,
+.display,
 .teclado{
     max-width:  500px;
     margin:  auto;
     margin-top: 100px;
 }
-.header div{
+.display div{
     display: flex;
     justify-content: space-between;
     align-items: center;  
 }
 
-.header .result{
+.display .result{
     background-color: var(--screen-brackground);
     width: 100%;
     height: 80px;
@@ -30,5 +30,7 @@ body{
     border: none;
     border-radius: 10px;
     font-size: 40px;
-    color: white;
+    font-weight: bold;
+    text-align: end;
+    color: var(--text-buttons);
 }
