--- a/src/css/teclas.css
+++ b/src/css/teclas.css
@@ -10,7 +10,7 @@
     margin-top: 30px;
     width: 100%;
 }
-.teclado ul {
+.teclado .container {
     background-color:var( --screen-brackground);
     display: grid;
     grid-template-columns: repeat(4, 25%);
@@ -22,7 +22,7 @@
     padding: 20px;
 }
 
-.teclado li{
+.teclado .teclas{
     color: var(--grayish-orange);
     border: none;
     border-radius: 10px;
@@ -30,41 +30,42 @@
     transition: transform 00ms;
 }
 
-.teclado li:active {
+.teclado .teclas:active {
     box-shadow: 0px 0px 20px 8px lightblue;    
 }
 
-.teclado li:hover {
+.teclado .teclas:hover {
    transform:  scale(.9);
    background-color: var(--Light-grayish-orange);
 }
 
 
-.teclado .tecla {
-    width: 100%;
-    height: 100%;
+.teclado .teclas {
+   
     border-radius: 10px;
     font-size: 32px;
     font-weight: bold;
-    color: var(--Desaturated-dark-blue2);
+    color: var(--text);
+    background-color: var(--background-buttons);
 }
 
 .teclado .reset{
     grid-column: span 2;
 
 }
-.teclado .reset button,
-.teclado .del button{
-    background-color: var(--Desaturated-dark-blue);
+.teclado .reset,
+.teclado .del {
+    background-color: var(--buttons-reset-del);
     color: white;
+    text-transform: uppercase;
 }
 .teclado .result{
     grid-column: span 2;
     
 }
-.teclado .result button{
-    background-color: var( --red);
-    color: white;
+.teclado .result{
+    background-color: var(--button-result);
+    color: var(--result);
 }
 .attribution {
     font-size: 11px;
